create df with train preds and residuals

--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -796,6 +796,249 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### residual df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>actual</th>\n",
+       "      <th>baseline_prediction</th>\n",
+       "      <th>baseline_residuals</th>\n",
+       "      <th>tweed_pred_train</th>\n",
+       "      <th>tweed_pred_train_residuals</th>\n",
+       "      <th>lass_pred_train</th>\n",
+       "      <th>lass_pred_train_residuals</th>\n",
+       "      <th>lr_pred_train</th>\n",
+       "      <th>lr_pred_train_residuals</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>24082</th>\n",
+       "      <td>315000.0</td>\n",
+       "      <td>455123.241223</td>\n",
+       "      <td>-1.401232e+05</td>\n",
+       "      <td>2.959147e+05</td>\n",
+       "      <td>19085.329213</td>\n",
+       "      <td>2.469432e+05</td>\n",
+       "      <td>68056.832575</td>\n",
+       "      <td>2.469420e+05</td>\n",
+       "      <td>68058.009977</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9432</th>\n",
+       "      <td>51513.0</td>\n",
+       "      <td>455123.241223</td>\n",
+       "      <td>-4.036102e+05</td>\n",
+       "      <td>2.575053e+05</td>\n",
+       "      <td>-205992.255087</td>\n",
+       "      <td>1.902083e+05</td>\n",
+       "      <td>-138695.296002</td>\n",
+       "      <td>1.902028e+05</td>\n",
+       "      <td>-138689.759927</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50142</th>\n",
+       "      <td>64709.0</td>\n",
+       "      <td>455123.241223</td>\n",
+       "      <td>-3.904142e+05</td>\n",
+       "      <td>2.723056e+05</td>\n",
+       "      <td>-207596.617520</td>\n",
+       "      <td>2.248293e+05</td>\n",
+       "      <td>-160120.272865</td>\n",
+       "      <td>2.248267e+05</td>\n",
+       "      <td>-160117.714022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38310</th>\n",
+       "      <td>218663.0</td>\n",
+       "      <td>455123.241223</td>\n",
+       "      <td>-2.364602e+05</td>\n",
+       "      <td>4.361445e+05</td>\n",
+       "      <td>-217481.530767</td>\n",
+       "      <td>4.884382e+05</td>\n",
+       "      <td>-269775.185462</td>\n",
+       "      <td>4.884389e+05</td>\n",
+       "      <td>-269775.904301</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7652</th>\n",
+       "      <td>1700000.0</td>\n",
+       "      <td>455123.241223</td>\n",
+       "      <td>1.244877e+06</td>\n",
+       "      <td>1.120309e+06</td>\n",
+       "      <td>579690.879027</td>\n",
+       "      <td>1.016630e+06</td>\n",
+       "      <td>683370.462416</td>\n",
+       "      <td>1.016634e+06</td>\n",
+       "      <td>683365.885950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8132</th>\n",
+       "      <td>512700.0</td>\n",
+       "      <td>455123.241223</td>\n",
+       "      <td>5.757676e+04</td>\n",
+       "      <td>4.025947e+05</td>\n",
+       "      <td>110105.319926</td>\n",
+       "      <td>4.386059e+05</td>\n",
+       "      <td>74094.119848</td>\n",
+       "      <td>4.386062e+05</td>\n",
+       "      <td>74093.792296</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40424</th>\n",
+       "      <td>252760.0</td>\n",
+       "      <td>455123.241223</td>\n",
+       "      <td>-2.023632e+05</td>\n",
+       "      <td>5.485675e+05</td>\n",
+       "      <td>-295807.519173</td>\n",
+       "      <td>6.165615e+05</td>\n",
+       "      <td>-363801.502809</td>\n",
+       "      <td>6.165611e+05</td>\n",
+       "      <td>-363801.126201</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10848</th>\n",
+       "      <td>530114.0</td>\n",
+       "      <td>455123.241223</td>\n",
+       "      <td>7.499076e+04</td>\n",
+       "      <td>4.842715e+05</td>\n",
+       "      <td>45842.453598</td>\n",
+       "      <td>5.536035e+05</td>\n",
+       "      <td>-23489.507789</td>\n",
+       "      <td>5.536047e+05</td>\n",
+       "      <td>-23490.738313</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21149</th>\n",
+       "      <td>199838.0</td>\n",
+       "      <td>455123.241223</td>\n",
+       "      <td>-2.552852e+05</td>\n",
+       "      <td>2.853669e+05</td>\n",
+       "      <td>-85528.885375</td>\n",
+       "      <td>2.391719e+05</td>\n",
+       "      <td>-39333.866649</td>\n",
+       "      <td>2.391700e+05</td>\n",
+       "      <td>-39332.024325</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28075</th>\n",
+       "      <td>468872.0</td>\n",
+       "      <td>455123.241223</td>\n",
+       "      <td>1.374876e+04</td>\n",
+       "      <td>3.701688e+05</td>\n",
+       "      <td>98703.176319</td>\n",
+       "      <td>3.861572e+05</td>\n",
+       "      <td>82714.775338</td>\n",
+       "      <td>3.861598e+05</td>\n",
+       "      <td>82712.154234</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>32443 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          actual  baseline_prediction  baseline_residuals  tweed_pred_train  \\\n",
+       "24082   315000.0        455123.241223       -1.401232e+05      2.959147e+05   \n",
+       "9432     51513.0        455123.241223       -4.036102e+05      2.575053e+05   \n",
+       "50142    64709.0        455123.241223       -3.904142e+05      2.723056e+05   \n",
+       "38310   218663.0        455123.241223       -2.364602e+05      4.361445e+05   \n",
+       "7652   1700000.0        455123.241223        1.244877e+06      1.120309e+06   \n",
+       "...          ...                  ...                 ...               ...   \n",
+       "8132    512700.0        455123.241223        5.757676e+04      4.025947e+05   \n",
+       "40424   252760.0        455123.241223       -2.023632e+05      5.485675e+05   \n",
+       "10848   530114.0        455123.241223        7.499076e+04      4.842715e+05   \n",
+       "21149   199838.0        455123.241223       -2.552852e+05      2.853669e+05   \n",
+       "28075   468872.0        455123.241223        1.374876e+04      3.701688e+05   \n",
+       "\n",
+       "       tweed_pred_train_residuals  lass_pred_train  lass_pred_train_residuals  \\\n",
+       "24082                19085.329213     2.469432e+05               68056.832575   \n",
+       "9432               -205992.255087     1.902083e+05             -138695.296002   \n",
+       "50142              -207596.617520     2.248293e+05             -160120.272865   \n",
+       "38310              -217481.530767     4.884382e+05             -269775.185462   \n",
+       "7652                579690.879027     1.016630e+06              683370.462416   \n",
+       "...                           ...              ...                        ...   \n",
+       "8132                110105.319926     4.386059e+05               74094.119848   \n",
+       "40424              -295807.519173     6.165615e+05             -363801.502809   \n",
+       "10848                45842.453598     5.536035e+05              -23489.507789   \n",
+       "21149               -85528.885375     2.391719e+05              -39333.866649   \n",
+       "28075                98703.176319     3.861572e+05               82714.775338   \n",
+       "\n",
+       "       lr_pred_train  lr_pred_train_residuals  \n",
+       "24082   2.469420e+05             68058.009977  \n",
+       "9432    1.902028e+05           -138689.759927  \n",
+       "50142   2.248267e+05           -160117.714022  \n",
+       "38310   4.884389e+05           -269775.904301  \n",
+       "7652    1.016634e+06            683365.885950  \n",
+       "...              ...                      ...  \n",
+       "8132    4.386062e+05             74093.792296  \n",
+       "40424   6.165611e+05           -363801.126201  \n",
+       "10848   5.536047e+05            -23490.738313  \n",
+       "21149   2.391700e+05            -39332.024325  \n",
+       "28075   3.861598e+05             82712.154234  \n",
+       "\n",
+       "[32443 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "act_pred_res[\"baseline_residuals\"] = act_pred_res.actual - act_pred_res.baseline_prediction\n",
+    "act_pred_res[\"tweed_pred_train\"] = tweed_pred_train\n",
+    "act_pred_res[\"tweed_pred_train_residuals\"] = act_pred_res.actual - act_pred_res[\"tweed_pred_train\"]\n",
+    "act_pred_res[\"lass_pred_train\"] = lass_pred_train\n",
+    "act_pred_res[\"lass_pred_train_residuals\"] = act_pred_res.actual - act_pred_res[\"lass_pred_train\"]\n",
+    "act_pred_res[\"lr_pred_train\"] = lr_pred_train\n",
+    "act_pred_res[\"lr_pred_train_residuals\"] = act_pred_res.actual - act_pred_res[\"lr_pred_train\"]\n",
+    "act_pred_res\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
