added cols of residuals

--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -1033,9 +1033,7 @@
     "act_pred_res[\"lass_pred_train_residuals\"] = act_pred_res.actual - act_pred_res[\"lass_pred_train\"]\n",
     "act_pred_res[\"lr_pred_train\"] = lr_pred_train\n",
     "act_pred_res[\"lr_pred_train_residuals\"] = act_pred_res.actual - act_pred_res[\"lr_pred_train\"]\n",
-    "act_pred_res\n",
-    "\n",
-    "\n"
+    "act_pred_res"
    ]
   },
   {
