--- a/report.ipynb
+++ b/report.ipynb
@@ -400,6 +400,163 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My baseline RMSE: $386,069.73\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "act_pred_res = pd.DataFrame({\"actual\": y_train})\n",
+    "act_pred_res[\"baseline_prediction\"] = train[\"home_tax_value\"].mean()\n",
+    "baseline_rmse = mean_squared_error(train[\"home_tax_value\"], act_pred_res[\"baseline_prediction\"] , squared=False)\n",
+    "print(f\"My baseline RMSE: ${round(baseline_rmse, 2):,}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Models\n",
+    "- A grid search was performed on each algorithm to find the best hyper parameters. The Linear Regressor performed the best with a RMSE, on training, of 318897.31 and 318602.77, on validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression, LassoLars, TweedieRegressor\n",
+    "\n",
+    "lasso = LassoLars(alpha=1.0, normalize=False).fit(X_train_scaled, y_train)\n",
+    "tweedie = TweedieRegressor(power=1, alpha=1.0).fit(X_train_scaled, y_train)\n",
+    "lr = LinearRegression().fit(X_train_scaled, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lass_pred_train = lasso.predict(X_train_scaled)\n",
+    "tweed_pred_train = tweedie.predict(X_train_scaled)\n",
+    "lr_pred_train = lr.predict(X_train_scaled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE for train and Tweedie: $319,198.01\n",
+      "RMSE for train and Lasso Lars: $318,897.31\n",
+      "RMSE for train and Linear Regression: $318,897.31\n"
+     ]
+    }
+   ],
+   "source": [
+    "tweed_rmse_train = mean_squared_error(y_train, tweed_pred_train, squared=False)\n",
+    "lassolars_rmse_train = mean_squared_error(y_train, lass_pred_train, squared=False)\n",
+    "linearreg_rmse_train = mean_squared_error(y_train, lr_pred_train, squared=False)\n",
+    "print(f\"RMSE for train and Tweedie: ${round(tweed_rmse_train, 2):,}\\nRMSE for train and Lasso Lars: ${round(lassolars_rmse_train, 2):,}\\nRMSE for train and Linear Regression: ${round(linearreg_rmse_train, 2):,}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- The Linear Regression edged out the Lasso Lars by a very small amount."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lass_pred_val = lasso.predict(X_val_scaled)\n",
+    "tweed_pred_val = tweedie.predict(X_val_scaled)\n",
+    "lr_pred_val = lr.predict(X_val_scaled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE for validate and Tweedie: $318,701.71\n",
+      "RMSE for validate and Lasso Lars: $318,602.8\n",
+      "RMSE for validate and Linear Regression: $318,602.77\n"
+     ]
+    }
+   ],
+   "source": [
+    "tweed_rmse_validate = mean_squared_error(y_val, tweed_pred_val, squared=False)\n",
+    "lassolars_rmse_validate = mean_squared_error(y_val, lass_pred_val, squared=False)\n",
+    "linearreg_rmse_validate = mean_squared_error(y_val, lr_pred_val, squared=False)\n",
+    "\n",
+    "print(f\"RMSE for validate and Tweedie: ${round(tweed_rmse_validate, 2):,}\\nRMSE for validate and Lasso Lars: ${round(lassolars_rmse_validate, 2):,}\\nRMSE for validate and Linear Regression: ${round(linearreg_rmse_validate, 2):,}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Linear Regression performed the best on training and validate, and it does not appear to be overfit. I will test using the Linear Regression."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE for test and Linear Regression: $315,197.87\n"
+     ]
+    }
+   ],
+   "source": [
+    "lr_pred_test = lr.predict(X_test_scaled)\n",
+    "linearreg_rmse_test = mean_squared_error(y_test, lr_pred_test, squared=False)\n",
+    "print(f\"RMSE for test and Linear Regression: ${round(linearreg_rmse_test, 2):,}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TO DO\n",
+    "### Conclusion\n",
+    "Using the Linear Regression model, with a RMSE of $315,197.87, will help us to better predict churn so that we can make the best changes to fuel member retention. I believe, the relationships I found between some features and churn, can help us make better business decisions in the future.\n",
+    "\n",
+    "### Recommendations\n",
+    "Understand what our competitors are doing with regard to their offered services. For starters I would recommended investigating variety in contracts, payment types, and internet and phone service as they relate to cost. I believe these are the big contributing factors to churn. Other services I would consider investigating afterwards are protections and streaming services. \n",
+    "\n",
+    "### Next Steps\n",
+    "- For my next steps, I would like to do some optimization to preparation and visualtions, and more statistical tests on features. After that is complete, I would like to rerun my machine learning models."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
