adjusted formatting and dollar sign in markdown

--- a/report.ipynb
+++ b/report.ipynb
@@ -70,15 +70,15 @@
     "</table>\n",
     "\n",
     "### Wrangling Zillow\n",
-    "- To wrangle the Zillow data, I used the Zillow database in our MySQL server, and selected `bedroomcnt`, `bathroomcnt`, `calculatedfinishedsquarefeet`, `taxvaluedollarcnt`, `yearbuilt`, `taxamount`, `fips` for single famiy residences\n",
-    "- Please see wrangle.py for full query details\n",
-    "- Columns were renamed for readability\n",
-    "- The percentage of rows that had na's was small enough that I felt comfortable dropping the rows\n",
-    "- Houses that had zero bathrooms were dropped\n",
-    "- Houses with a size under 200 square feet were dropped\n",
-    "- I handled outliers by removeing a property outside of three standard deviations\n",
-    "- The `taxamount` column was dropped due to it being a potential for data leakage\n",
-    "- A `county` column was created from the `fips` codes"
+    "- To wrangle the Zillow data, I used the Zillow database in our MySQL server, and selected `bedroomcnt`, `bathroomcnt`, `calculatedfinishedsquarefeet`, `taxvaluedollarcnt`, `yearbuilt`, `taxamount`, `fips` for single famiy residences.\n",
+    "- Please see wrangle.py for full query details.\n",
+    "- Columns were renamed for readability.\n",
+    "- The percentage of rows that had na's was small enough that I felt comfortable dropping the rows.\n",
+    "- Houses that had zero bathrooms were dropped.\n",
+    "- Houses with a size under 200 square feet were dropped.\n",
+    "- I handled outliers by removeing a property outside of three standard deviations.\n",
+    "- The `taxamount` column was dropped due to it being a potential for data leakage.\n",
+    "- A `county` column was created from the `fips` codes."
    ]
   },
   {
@@ -100,8 +100,8 @@
    "source": [
     "### Preparing Zillow\n",
     "To get my X and y sets:\n",
-    "- Dropped the following columns: `home_tax_value`, `fips`, `year_built`, `county`\n",
-    "- Scaled the data by fitting on the X training set only and transforming all three X datasets"
+    "- Dropped the following columns: `home_tax_value`, `fips`, `year_built`, `county`.\n",
+    "- Scaled the data by fitting on the X training set only and transforming all three X datasets."
    ]
   },
   {
@@ -172,7 +172,7 @@
    "metadata": {},
    "source": [
     "### Exploratory Data Analysis\n",
-    "- Signifcance Level for each statistical test will be 0.05\n",
+    "- Signifcance Level for each statistical test will be 0.05.\n",
     "#### Question 1\n",
     "- Does a correlation exist between square feet and price?\n",
     "\n",
@@ -224,7 +224,7 @@
    "metadata": {},
    "source": [
     "#### Take Away\n",
-    "- With a P-Value of 0.0, which is less than the signifane level, I will reject the null hypothesis and say that there is a correlation between square feet and housing price"
+    "- With a P-Value of 0.0, which is less than the signifane level, I will reject the null hypothesis and say that there is a correlation between square feet and housing price."
    ]
   },
   {
@@ -279,7 +279,7 @@
    "metadata": {},
    "source": [
     "#### Take Away\n",
-    "- With a P-Value of 0.0, which is less than the signifane level, I will reject the null hypothesis and say that there is a correlation between bedrooms and housing price"
+    "- With a P-Value of 0.0, which is less than the signifane level, I will reject the null hypothesis and say that there is a correlation between bedrooms and housing price."
    ]
   },
   {
@@ -334,7 +334,7 @@
    "metadata": {},
    "source": [
     "#### Take Away\n",
-    "- With a P-Value of 0.0, which is less than the signifane level, I will reject the null hypothesis and say that there is a correlation between bathrooms and housing price"
+    "- With a P-Value of 0.0, which is less than the signifane level, I will reject the null hypothesis and say that there is a correlation between bathrooms and housing price."
    ]
   },
   {
@@ -383,10 +383,10 @@
    "metadata": {},
    "source": [
     "#### Key Take Aways\n",
-    "- Square footage is the number one driving factor of home prices\n",
-    "- Bathrooms is the number two driving factor of home prices\n",
-    "- Bedrooms is the number three driving factor of home prices\n",
-    "- Orange County has the highest mean housing price"
+    "- Square footage is the number one driving factor of home prices.\n",
+    "- Bathrooms is the number two driving factor of home prices.\n",
+    "- Bedrooms is the number three driving factor of home prices.\n",
+    "- Orange County has the highest mean housing price."
    ]
   },
   {
@@ -436,7 +436,7 @@
    "metadata": {},
    "source": [
     "### Models\n",
-    "- A grid search was performed on each algorithm to find the best hyper parameters. The Linear Regressor performed the best with a RMSE, on training, of 318897.31 and 318602.77, on validation"
+    "- A grid search was performed on each algorithm to find the best hyper parameters. The Linear Regressor performed the best with a RMSE, on training, of \\$318,897.31 and \\$318,602.77, on validation."
    ]
   },
   {
@@ -564,10 +564,10 @@
    "metadata": {},
    "source": [
     "### Conclusion\n",
-    "Using the Linear Regression model, with a RMSE of $315,197.87, will need some work. While it was the lowest of the algorithms, that number is quite a large error and I would love to get it down to under $100,000. There are correlations between square footage, bathrooms, bedrooms, and price.\n",
+    "Using the Linear Regression model, with a RMSE of \\$315,197.87, will need some work. While it was the lowest of the algorithms, that number is quite a large error and I would love to get it down to under \\$100,000. There are correlations between square footage, bathrooms, bedrooms, and price.\n",
     "\n",
     "### Recommendations and Next Steps\n",
-    "For my next steps and recommendations, I would like to make some more subsets of the data. For example, I would like to segment the prices into quartiles to make them easier to predict. I would also like to look at subsetting by square footage since that has the biggest impact on price. Furthermore, I would like to run my models with the unscaled versions. I will then rerun the machine learning models expecting to have my RMSE down under $100,000."
+    "For my next steps and recommendations, I would like to make some more subsets of the data. For example, I would like to segment the prices into quartiles to make them easier to predict. I would also like to look at subsetting by square footage since that has the biggest impact on price. Furthermore, I would like to run my models with the unscaled versions. I will then rerun the machine learning models expecting to have my RMSE down under \\$100,000."
    ]
   }
  ],
