--- a/report.ipynb
+++ b/report.ipynb
@@ -15,10 +15,10 @@
     "I want to predict housing prices as accuractely as possible to help sellers and buyers maximize their quality of life.\n",
     "\n",
     "### Initial Questions\n",
-    "1) Does a correlation exist between square feet and price?\n",
-    "2) Is there a correlation between number of bathrooms and price?\n",
-    "3) Is there a correlation between number of bedroooms and price?\n",
-    "4) Do houses in Los Angeles cost more than Orange County or Ventura?\n",
+    "<p>1) Does a correlation exist between square feet and price?</p>\n",
+    "<p>2) Is there a correlation between number of bathrooms and price?</p>\n",
+    "<p>3) Is there a correlation between number of bedroooms and price?</p>\n",
+    "<p>4) Do houses in Los Angeles cost more than Orange County or Ventura?</p>\n",
     "\n",
     "### Data Dictionary\n",
     "<table>\n",
