made correction to conclusion

--- a/report.ipynb
+++ b/report.ipynb
@@ -565,11 +565,16 @@
    "metadata": {},
    "source": [
     "### Conclusion\n",
-    "Using the Linear Regression model, with a RMSE of \\$315,197.87, will need some work. While it was the lowest of the algorithms, that number is quite a large error and I would love to get it down to under \\$100,000. There are correlations between square footage, bathrooms, bedrooms, and price.\n",
+    "Using the Linear Regression model, with a RMSE of \\$315,197.87, will need some work. While it was the lowest of the algorithms, that number is quite a large error and I would love to get it down to under \\$100,000. Square footage is the number one driving factor for prices, bathrooms are the number two driving factor for prices, and bedrooms are the number three driving factor for prices.Orange County has the highest mean housing price.\n",
     "\n",
     "### Recommendations and Next Steps\n",
     "For my next steps and recommendations, I would like to make some more subsets of the data. For example, I would like to segment the prices into quartiles to make them easier to predict. I would also like to look at subsetting by square footage since that has the biggest impact on price. Furthermore, I would like to run my models with the unscaled versions. I will then rerun the machine learning models expecting to have my RMSE down under \\$100,000."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
